
    S2GRAPH-44: Provide cache for WhereParser on query (Committed by DOYUNG YOON).

    S2GRAPH-53: Refactor Storage to decide which serializer/deserializer for IndexEdge/SnapshotEdge/Vertex 
		(Committed by DOYUNG YOON).

    S2GRAPH-55: Add param to enable epoll event loop in experimental netty http server (Committed by daewon).

    S2GRAPH-22: Add missing shebang line to file. 
		(Contributed by Injun Song<ijsong@gmail.com>, committed by DOYUNG YOON)
    
    S2GRAPH-70: Automate the process of building a distribution package
		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)

  BUG FIXES

    S2GRAPH-18: Query Option "interval" is Broken. 
                (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by daewon)

    S2GRAPH-20: bug fix in query option "sample".
                (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
      
    S2GRAPH-28: _to option gives wrong result on query.	
                (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
    
    S2GRAPH-38: Transform option gives wrong result since it transform degree edge too (Committed by DOYUNG YOON).

    S2GRAPH-42: Bug on EdgeTransformer with specific cases (Committed by DOYUNG YOON).

    S2GRAPH-43: Bug on offset when Interval is given on query (Committed by DOYUNG YOON).

    S2GRAPH-19: When query with duration error (Committed by DOYUNG YOON).
    
    S2GRAPH-63: Condition on partition strong edges and weak edges on mutateEdges is wrong (Committed by DOYUNG YOON).

  TASKS

    S2GRAPH-2: Update document and quick start environment to have recent set-up command changes.
               (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by daewon)

    S2GRAPH-5: Add Apache RAT to valid LICENSE errors. (Committed by DOYUNG YOON).

    S2GRAPH-17: Remove unnecessary abstraction layer, Storage. (Committed by DOYUNG YOON).
    